# spuri_io

./: .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  build.rs  rust-toolchain
blog/: 0 to Video: HDMI output on an FPGA.md  A 2D Rendering of the Plan 9 Palette Cube.md  Enumerating Lattice Points in a Hypersphere.md  Lindenmayer Systems.md  Pen Plotter.md
files/: style.css
src/: base.rs  blog.rs  code_art.rs  err.rs  header.rs  main.rs  robots.rs  static_pages.rs  youtube.rs
src/tests/: base.js  get_video_info?video_id=tvTRZJ-4EyI&sts=17885&el=detailpage  tvTRZJ-4EyI
templates/: about.html  base.html  blog_index.html  blog_page.html  code_art_gallery.html  error.html  index.html
test/: build_openssl.sh
