[package]
name = "spuri_io"
version = "0.1.0"
authors = ["Sameer <spuri4096@gmail.com>"]

[dependencies]
actix = "^0.5.8"
actix-web = { version="^0.6.12", features=["alpn"]}
askama = "^0.6.4"
openssl = "^0.10.10"
env_logger = "^0.5.10"
log = "^0.4.2"
base64 = "^0.9.2"
notify = "^4.0.0"
image = "^0.19.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_urlencoded = "^0.5.2"
pulldown-cmark = { version = "^0.1.2", default-features = false }
ammonia = "^1.2.0"

[build-dependencies]
askama = "^0.6.4"
openssl = "^0.10.10"
base64 = "^0.9.2"
