[package]
name = "spuri_io"
version = "0.1.0"
authors = ["Sameer <purisame@spuri.io>"]

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
askama = { git = 'https://github.com/djc/askama', features = ['with-rocket'] }
openssl = "0.10"
env_logger = "0.6"
log = "0.4"
base64 = "0.10"
notify = "4.0"
image = "0.20"
serde = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.5"
pulldown-cmark = { version = "0.2", default-features = false }
ammonia = "2.0"
chrono = "0.4"
reqwest = "0.9"
url = "1.7"

[build-dependencies]
askama = { git = 'https://github.com/djc/askama', features = ['with-rocket'] }
openssl = "0.10"
base64 = "0.10"
